implemented company selector in publication form for activities + feed company box + simplified registration funnel for companies2

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -978,6 +978,37 @@ nav {
       border-radius: 8px;
       cursor: pointer;
     }
+    .organization-wrapper {
+      display: flex;
+      align-items: center;
+      .organization-logo {
+        max-width: 37px;
+        max-height: 37px;
+        width: 37px;
+        height: 37px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 8px;
+        border: 1px solid #cfcfcf;
+        border-radius: 8px;
+        padding: 5px;
+        background-color: white;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 8px;
+        }
+      }
+      .organization-right {
+        h3 {
+          margin: 0;
+          font-family: "Nunito", sans-serif;
+          font-size: 19.2px;
+          font-weight: 400 !important;
+        }
+      }
+    }
   }
   .col.center {
     padding: 0 50px;
@@ -1183,6 +1214,50 @@ nav {
   }
   .sided-shadow {
     padding-bottom: 50px;
+  }
+  form {
+    .organizations-list {
+      display: flex;
+      align-items: center;
+      margin: -16px -8px -8px -8px;
+      label {
+        display: flex;
+        align-items: center;
+        margin: 8px;
+      }
+    }
+    .organization-wrapper {
+      display: flex;
+      align-items: center;
+      margin: 8px;
+      .organization-logo {
+        max-width: 37px;
+        max-height: 37px;
+        width: 37px;
+        height: 37px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 8px;
+        border: 1px solid #cfcfcf;
+        border-radius: 8px;
+        padding: 5px;
+        background-color: white;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 8px;
+        }
+      }
+      .organization-right {
+        h3 {
+          margin: 0;
+          font-family: "Nunito", sans-serif;
+          font-size: 15px;
+          font-weight: 400 !important;
+        }
+      }
+    }
   }
   .images,
   .cover {
@@ -2205,6 +2280,10 @@ nav {
         width: 75px;
         height: 75px;
         overflow: hidden;
+        border: 1px solid #cfcfcf;
+        border-radius: 100px;
+        padding: 5px;
+        background-color: white;
         img {
           border-radius: 100px;
           width: 75px;
@@ -3540,28 +3619,30 @@ nav {
             text-decoration: line-through;
           }
         }
-        button {
+        button,
+        a {
           width: 100%;
           padding: 10px;
           margin-top: 20px;
           display: flex;
           align-items: center;
           justify-content: center;
+          border-radius: 8px;
           svg {
             margin-left: 8px;
           }
         }
         .btn-soft-blue {
           background-color: #ddeef3;
-          color: #3a4887;
+          color: #3a4887 !important;
         }
         .btn-soft-orange {
           background-color: #ffeedb;
-          color: #b8761a;
+          color: #b8761a !important;
         }
         .btn-soft-red {
           background-color: #ffe4df;
-          color: #ac402a;
+          color: #ac402a !important;
         }
       }
     }
