--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2132,12 +2132,16 @@ nav {
     width: 230px;
     height: 130px;
     margin-right: 20px;
-    background: grey;
+    background: #ffffff;
+    border: 1px solid #abc3f4;
     border-radius: 8px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .listing-cover img {
-    width: 230px;
+    width: 100%;
     height: auto;
   }
   .listing-content {
@@ -2840,6 +2844,17 @@ nav {
     width: 100%;
     padding: 20px 0;
   }
+  .box-wrapper {
+    display: flex;
+    align-items: flex-start;
+  }
+  .col-left {
+    width: 70%;
+    margin-right: 20px;
+  }
+  .col-right {
+    flex: 1;
+  }
   .box.bordered {
     border: 1px solid #e8e8e8;
     padding: 20px;
@@ -2849,7 +2864,7 @@ nav {
     width: 100%;
     height: 220px;
     background-size: cover;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     border: 1px solid #e8e8e8;
     position: relative;
     background-position: center center;
@@ -2888,6 +2903,9 @@ nav {
     border-radius: 8px;
     position: relative;
     width: 100%;
+    border-radius: 0 0 8px 8px;
+    border: 1px solid #e8e8e8;
+    border-top: none;
     .header-top-bar {
       display: flex;
       align-items: flex-end;
@@ -2909,10 +2927,11 @@ nav {
           display: flex;
           align-items: center;
           justify-content: center;
-          padding: 6px;
+          padding: 3px;
           img {
             min-width: 100%;
             min-height: 100%;
+            border-radius: 6px;
           }
         }
         .organization-meta {
@@ -2938,115 +2957,20 @@ nav {
     }
     .header-bottom-bar {
       margin-top: 15px;
+      max-width: 65%;
       p {
         font-size: 16px;
-        max-width: 65%;
-      }
-    }
-    .organization-meta {
-      width: 100%;
-      svg {
-        margin-right: 3px;
-        min-width: 18px;
-        min-height: 18px;
-      }
-      a {
-        margin-left: 4px;
-      }
-      .user-username svg {
-        margin-right: -4px !important;
-      }
-    }
-    .user-fullName {
-      font-size: 1.6em;
-      margin-bottom: 0;
-    }
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-    ul li {
-      padding: 3px 0;
-    }
-    li span {
-      font-weight: bold;
-    }
-  }
-  .box .col.center {
-    flex: 1;
-    .filter-bar {
-      display: flex;
-      justify-content: space-between;
-      border-radius: 8px;
-      overflow: hidden;
-      button {
-        width: 100%;
-        padding: 10px 15px;
-        margin: 0 6px;
-        font-size: 1.2em;
-        font-weight: bold;
-      }
-      button:first-child {
-        margin-left: 0;
-      }
-      button:last-child {
-        margin-right: 0;
-      }
-      button.active {
-        background-color: $active-tab-background;
-        border-radius: 8px;
-        cursor: pointer;
         color: $dark-text;
-        svg {
-          stroke: $dark-text;
-        }
-      }
-      button:hover:not(.active) {
-        background-color: $input-background;
-        border-radius: 8px;
-        cursor: pointer;
-      }
-      button:focus {
-        box-shadow: none;
-      }
-      button svg {
-        margin-right: 8px;
-      }
-    }
-    .user-listings {
-      .title-area h2 {
-        font-family: "INTER";
-        font-size: 1.6em;
-        font-weight: bold;
-      }
-      .box.bordered {
-        padding: 10px 20px;
-        background: #e8e8e8;
-        margin-top: 20px;
-      }
-      .content.box {
-        margin: 20px 0;
-        border-radius: 8px;
-      }
-      .content.box:last-child {
+
         margin-bottom: 0;
       }
     }
-    .box.empty {
+    .filter-bar {
       display: flex;
       align-items: center;
-      justify-content: center;
-      flex-flow: column;
-      text-align: center;
-      .media img {
-        width: 280px;
-        height: auto;
-        margin-bottom: 25px;
-        max-height: 240px;
-      }
-      .profile-owner-name {
-        font-weight: bold;
+      margin-top: 20px;
+      button {
+        padding: 6px 35px;
       }
     }
   }
