--- a/styles/PublicSquareBox.module.scss
+++ b/styles/PublicSquareBox.module.scss
@@ -1,7 +1,8 @@
 .listingSquareBox {
-  box-shadow: 0px 8px 10px rgb(0 0 0 / 6%);
+  background-color: #ffffff;
+  border: 1px solid #d0d7e6;
   border-radius: 8px;
-  padding: 10px;
+  padding: 15px;
   width: 25%;
 }
 
@@ -39,17 +40,15 @@
 }
 
 .listingTitle {
-  font-family: "Nunito";
-  font-size: 1.03em;
-  font-weight: bold;
-  margin: 15px 0 10px 0;
+  font-size: 1em;
+  font-weight: 600 !important;
+  margin: 15px 0 5px 0;
 }
 
 .listingSubtitle,
 .listingLocation {
   font-size: 0.9em;
-  line-height: 1.2em;
-  opacity: 0.7;
+  line-height: 1.4em;
   margin-bottom: 3px;
 }
 
@@ -57,6 +56,8 @@
   display: flex;
   align-items: center;
   margin: 5px 0 0 0;
+  opacity: 0.7;
+  font-size: 0.8em;
 }
 
 .listingLocation svg {
@@ -67,5 +68,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 15px -4px -4px -4px;
+  margin: 10px -4px -4px -4px;
 }
