--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,7 +62,7 @@ a {
 
 .btn-m {
   padding: 10px 14px !important;
-  font-size: 0.9em !important;
+  font-size: 0.85em !important;
 }
 
 .btn-dark {
@@ -470,6 +470,8 @@ nav {
   .top-nav-subtitle {
     max-width: 70%;
     margin-bottom: 0;
+    font-size: 0.9em;
+    color: #6376a0;
   }
   .top-nav-meta {
     list-style: none;
