--- a/styles/PublicSquareBox.module.scss
+++ b/styles/PublicSquareBox.module.scss
@@ -1,6 +1,6 @@
 .listingSquareBox {
   background-color: #ffffff;
-  border: 1px solid #d0d7e6;
+  border: 1px solid #e7ebf5;
   border-radius: 8px;
   padding: 15px;
   width: 25%;
