--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,7 +25,7 @@
 }
 
 $dark-blue: #00206b;
-$medium-blue: #3a4887;
+$medium-blue: #6376a0;
 $soft-blue: #ebf1ff;
 $white: #ffffff;
 $dark-red: #fd8281;
@@ -107,7 +107,6 @@ a {
     position: absolute;
     line-height: 40px;
     color: #ffffff;
-    font-weight: bold;
     font-size: 0.9em;
   }
 }
@@ -419,8 +418,8 @@ nav {
 .content-bar {
   padding: 3px 0;
   display: block;
-  border-top: 1px solid #e8e8e8;
-  border-bottom: 1px solid #e8e8e8;
+  border-top: 1px solid #e7ebf5;
+  border-bottom: 1px solid #e7ebf5;
   .listings-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -457,12 +456,21 @@ nav {
 /*---HEADER STYLES---*/
 /*---TOP NAV---*/
 
+.top-nav {
+  padding: 0 !important;
+  background-image: url("https://res.cloudinary.com/juligoodie/image/upload/v1624975618/getaways-guru/static-files/background-pattern_jgpvmh.svg");
+  background-repeat: repeat-x;
+  background-size: 18%;
+  border-bottom: 1px solid #e7ebf5;
+}
+
 .top-nav-wrapper {
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 12px 0;
   .top-nav-title {
     font-size: 1.8em;
     margin: 0 0 5px 0;
+    text-shadow: 0 0 20px rgb(255 255 255) !important;
   }
   .top-nav-title.db {
     margin: 0 auto;
@@ -1150,6 +1158,9 @@ nav {
     align-items: center;
     justify-content: space-between;
   }
+  .btn {
+    flex: none;
+  }
 }
 
 .publicationModal .modal-body {
@@ -1525,7 +1536,7 @@ nav {
   padding: 0 !important;
   background-color: #fff;
   background-color: #f1f1f1;
-  border-bottom: 1px solid #cfcfcf;
+  border-bottom: 1px solid #e7ebf5;
   a {
     color: $dark-blue;
   }
@@ -1566,6 +1577,7 @@ nav {
   .subtitle {
     min-width: 375px;
     max-width: 375px;
+    font-size: 0.9em;
   }
   .date {
     width: 187.5px;
@@ -1663,7 +1675,7 @@ nav {
     margin-right: 22%;
     .top-nav-wrapper {
       padding: 0 0 10px 0;
-      border-bottom: 1px solid #e8e8e8;
+      border-bottom: 1px solid #e7ebf5;
       margin-bottom: 10px;
       .listings-counter {
         margin-top: 10px;
@@ -1674,7 +1686,7 @@ nav {
     .sponsor-block {
       margin-top: 15px;
       a {
-        color: #000 !important;
+        color: #00206b !important;
         font-size: 0.85rem;
       }
       .sponsor-block-top {
@@ -2039,7 +2051,7 @@ nav {
       }
       .cloud-tag {
         padding: 5px 10px;
-        border: 1px solid #e8e8e8;
+        border: 1px solid #e7ebf5;
         border-radius: 8px;
         margin: 5px;
         color: #00206b;
@@ -2048,17 +2060,17 @@ nav {
       }
       .ad-wrapper {
         margin-top: 20px;
-        border-top: 1px solid #e8e8e8;
+        border-top: 1px solid #e7ebf5;
         padding-top: 20px;
         .ad-block {
           height: 300px;
           width: 100%;
-          background-color: #e8e8e8;
+          background-color: #e7ebf5;
         }
       }
       .legal-links {
         margin-top: 20px;
-        border-top: 1px solid #e8e8e8;
+        border-top: 1px solid #e7ebf5;
         padding-top: 20px;
         ul {
           list-style: none;
@@ -2115,13 +2127,13 @@ nav {
 /*---LISTINGS BOX STYLES---*/
 
 #listing:not(:last-child) {
-  border-bottom: 1px solid #e8e8e8;
+  border-bottom: 1px solid #e7ebf5;
 }
 
 #listing {
   .listing-wrapper {
     padding: 20px 0;
-    color: #000;
+    color: #00206b;
   }
   .listing-cover {
     width: 230px;
@@ -2203,7 +2215,7 @@ nav {
           }
         }
         li.listing-location span {
-          border-bottom: 2px solid #000;
+          border-bottom: 2px solid #00206b;
         }
       }
     }
@@ -2217,7 +2229,7 @@ nav {
       align-items: center;
       span {
         display: block;
-        border-bottom: 2px solid #000;
+        border-bottom: 2px solid #00206b;
       }
     }
     .listing-bookmark-wrapper:last-child {
@@ -2491,7 +2503,7 @@ nav {
       }
       span {
         display: block;
-        border-bottom: 2px solid #000;
+        border-bottom: 2px solid #00206b;
       }
     }
   }
@@ -2597,7 +2609,7 @@ nav {
     flex-direction: column;
     align-items: center;
     margin: 40px 0 60px 0;
-    border-top: 1px solid #e8e8e8;
+    border-top: 1px solid #e7ebf5;
     padding-top: 40px;
     h2 {
       text-align: center;
@@ -2664,7 +2676,7 @@ nav {
     max-width: 20% !important;
   }
   .box.bordered {
-    border: 1px solid #e8e8e8;
+    border: 1px solid #e7ebf5;
     padding: 20px;
     border-radius: 8px;
   }
@@ -2788,7 +2800,7 @@ nav {
       }
       .box.bordered {
         padding: 10px 20px;
-        background: #e8e8e8;
+        background: #e7ebf5;
         margin-top: 20px;
       }
       .content.box {
@@ -2835,12 +2847,12 @@ nav {
     flex: 1;
   }
   .header-box-wrapper {
-    box-shadow: 0px 2px 10px rgb(0 0 0 / 6%);
+    border: 1px solid #e7ebf5;
     border-radius: 8px;
     overflow: hidden;
   }
   .box.bordered {
-    border: 1px solid #e8e8e8;
+    border: 1px solid #e7ebf5;
     padding: 20px;
     border-radius: 8px;
   }
@@ -2850,6 +2862,7 @@ nav {
     background-size: cover;
     position: relative;
     background-position: center center;
+    border-bottom: 1px solid #e7ebf5;
     .edit-cover {
       input {
         display: none;
@@ -2863,6 +2876,7 @@ nav {
       top: 20px;
       color: #ffffff !important;
       transition: 0.3s;
+      font-size: 0.85em;
       border-radius: 8px;
       backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
@@ -2901,7 +2915,7 @@ nav {
           min-width: 130px;
           min-height: 130px;
           overflow: hidden;
-          border: 1px solid #e8e8e8;
+          border: 1px solid #e7ebf5;
           background-color: #ffffff;
           border-radius: 8px;
           display: flex;
@@ -2921,11 +2935,12 @@ nav {
             margin-right: -3px;
           }
           .organization-name {
-            font-size: 1.4em;
-            margin: 0 0 3px 0;
+            font-size: 1.6em;
+            margin: 0 0 2px 0;
           }
           .organization-slug {
             margin-bottom: 0;
+            color: $medium-blue;
           }
         }
       }
@@ -2967,16 +2982,18 @@ nav {
   }
   aside {
     padding: 15px;
-    margin-top: 30px;
+    border: 1px solid #e7ebf5;
+    border-radius: 8px;
     ul {
       list-style: none;
       margin: 0;
       padding: 0;
       margin-bottom: 15px;
       padding-bottom: 15px;
-      border-bottom: 1px solid #f2f7f9;
+      border-bottom: 1px solid #e7ebf5;
       li {
         margin-bottom: 5px;
+        font-size: 0.9em;
         a {
           text-decoration: underline !important;
         }
@@ -2989,7 +3006,7 @@ nav {
       }
     }
     h3 {
-      font-size: 16px;
+      font-size: 1em;
       margin-bottom: 10px;
     }
     .profile-map {
@@ -2999,7 +3016,7 @@ nav {
       border-radius: 8px;
       overflow: hidden;
       border: 1px solid #f2f7f9;
-      margin: 15px 0;
+      margin: 15px 0 0 0;
     }
   }
 }
@@ -3016,7 +3033,7 @@ nav {
     margin-top: 19px;
   }
   .box.bordered {
-    border: 1px solid #e8e8e8;
+    border: 1px solid #e7ebf5;
     padding: 20px;
     border-radius: 8px;
   }
@@ -3077,7 +3094,7 @@ nav {
     max-width: 20% !important;
   }
   .box.bordered {
-    border: 1px solid #e8e8e8;
+    border: 1px solid #e7ebf5;
     padding: 20px;
     border-radius: 8px;
   }
@@ -3375,7 +3392,7 @@ nav {
 
 .ql-editor.ql-blank::before {
   font-size: 16px;
-  color: #000 !important;
+  color: #00206b !important;
   font-style: normal !important;
   left: 12px !important;
 }
@@ -3405,7 +3422,7 @@ nav {
   margin-bottom: 16px;
   .top-bar {
     background: #ffffff;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #e7ebf5;
     border-radius: 8px 8px 0 0;
     width: 100%;
     .image-drop-zone {
@@ -3435,7 +3452,7 @@ nav {
   }
   .images-list-wrapper {
     width: 100%;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #e7ebf5;
     border-radius: 0 0 8px 8px;
     margin-top: -1px;
     padding: 16px;
