--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -478,6 +478,10 @@ nav {
   border-bottom: 1px solid #e7ebf5;
 }
 
+.navbar-light {
+  border-bottom: 1px solid #e7ebf5;
+}
+
 .top-nav-wrapper {
   margin: 0 auto;
   padding: 12px 0;
@@ -512,9 +516,14 @@ nav {
 
 #homepage {
   #hero {
-    padding: 80px 0;
+    padding: 50px 0 10px 0;
     position: relative;
     z-index: 1000;
+    .wrapper {
+      background: #fef8f2;
+      border-radius: 10px;
+      padding: 60px 80px;
+    }
     .header-col.left {
       position: inherit;
       z-index: 1000;
@@ -703,7 +712,7 @@ nav {
     .header-col.right {
       position: absolute;
       z-index: 0;
-      right: 15px;
+      right: 80px;
       display: flex;
       .header-image {
         width: 250px;
@@ -719,12 +728,12 @@ nav {
         position: relative;
         top: 30px;
         .header-image {
-          margin-bottom: 30px;
+          margin-bottom: 15px;
         }
       }
       .right {
         .header-image {
-          height: 500px;
+          height: 451px;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -3292,6 +3301,32 @@ nav {
 }
 
 /*---END COMPLETE REGISTRATION PAGE---*/
+/*---CONFIRM EMAIL PAGE---*/
+
+#emailConfirmation {
+  .content-wrapper {
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 300px;
+      height: auto;
+    }
+    h1 {
+      margin-top: 20px;
+    }
+    .sub-h1 {
+      margin-top: 8px;
+    }
+    button {
+      margin-top: 25px;
+    }
+  }
+}
+
+/*---END CONFIRM EMAIL PAGE---*/
 /*---SETTINGS---*/
 #settings {
   .user-meta-wrapper {
